Actualizando con CSS

--- a/micv.html
+++ b/micv.html
@@ -1,62 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Este es mi CV</title>
+    <link rel="stylesheet" href="micv.css">
 </head>
+
 <body>
-  <h1>Curriculum Vitae</h1>  
-  <h2>Carlos N</h2>
-  <img src="FR_DSC_6595.jpg" alt="Foto de Carlos N">
-  <section>
-      <h2>Datos Personales</h2>
-      <ul>
-          <li>DNI:22737000</li>
-          <li>Edad: 48 años</li>
-          <li>Direccion: Parana-ER</li>
-          <li>Tel: 0343-154000111</li>
-          <li>Mail: <a href="mailto:cnr481@hotmail.com">cnr481@hotmail.com</a> </li>
-      </ul>
-  </section>
-  <section>
-      <h2>Historia Laboral</h2>
-      <ol>
-            <li>Enero de 2010 a Diciembre de 2021 <br>
-            Nexo Aberturas <br>
-            Encargado de Planta
-            </li>
-            <li>Enero de 2000 a Diciembre de 2009 <br>
-                Longvie <br>
-                Tecnico de mantenimiento
-            </li>
-            <li>Enero de 1990 a Diciembre de 1999 <br>
-                Johnson Acero S.A. <br>
-                Operario
-            </li>
-         </ol>
-  </section>
-  <section>
-      <h2>Estudios Cursados</h2>
-      <ol>
-          <li>Primarios: Inst. Privado “Dr. Enrique Carbo” (1985)</li>
-          <li>Secundarios: Bachiller Mercantil, Inst. Privado <br> “Dr. Enrique Carbo” Colegio Don Bosco (1990)</li>
-      </ol>
-  </section>
-  <section>
-      <h2>Estudios Complementarios</h2>
-      <ul>
-          <li>2004-Analista en Computación Administrativa.</li>
-          <li>2007-Electricidad del Automóvil (Univ. Popular)</li>
-          <li>2008-Instalador Electricista. (Centro Educ. Adultos)</li>
-          <li>2008- Instalador Sanitario. (Centro Educ. Adultos)</li>
-          <li>2008-AutoCAD 2d y 3d.</li>
-          <li>2015- Fotógrafo Profesional (AFPER)</li>
-      </ul>
-  </section>
-  <footer>
-      <a href="Curriculum Practica HTML.pdf" target="_blank">Version para Imprimir</a>
-  </footer>
+    <header class="encabezado">
+        <Div>
+            <h1>Curriculum Vitae</h1>
+            <h2>Carlos N</h2>
+        </Div>
+
+        <img src="FR_DSC_6595.jpg" alt="Foto de Carlos N">
+
+    </header>
+    <main class="bloques">
+        <section>
+            <h2>Datos Personales</h2>
+            <ul>
+                <li>DNI:22737000</li>
+                <li>Edad: 48 años</li>
+                <li>Direccion: Parana-ER</li>
+                <li>Tel: 0343-154000111</li>
+                <li>Mail: <a href="mailto:cnr481@hotmail.com">cnr481@hotmail.com</a> </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Historia Laboral</h2>
+            <ol>
+                <li>Enero de 2010 a Diciembre de 2021 <br>
+                    Nexo Aberturas <br>
+                    Encargado de Planta
+                </li>
+                <li>Enero de 2000 a Diciembre de 2009 <br>
+                    Longvie <br>
+                    Tecnico de mantenimiento
+                </li>
+                <li>Enero de 1990 a Diciembre de 1999 <br>
+                    Johnson Acero S.A. <br>
+                    Operario
+                </li>
+            </ol>
+        </section>
+        <section>
+            <h2>Estudios Cursados</h2>
+            <ol>
+                <li>Primarios: Inst. Privado “Dr. Enrique Carbo” (1985)</li>
+                <li>Secundarios: Bachiller Mercantil, Inst. Privado <br> “Dr. Enrique Carbo” Colegio Don Bosco (1990)
+                </li>
+            </ol>
+        </section>
+        <section>
+            <h2>Estudios Complementarios</h2>
+            <ul>
+                <li>2004-Analista en Computación Administrativa.</li>
+                <li>2007-Electricidad del Automóvil (Univ. Popular)</li>
+                <li>2008-Instalador Electricista. (Centro Educ. Adultos)</li>
+                <li>2008- Instalador Sanitario. (Centro Educ. Adultos)</li>
+                <li>2008-AutoCAD 2d y 3d.</li>
+                <li>2015- Fotógrafo Profesional (AFPER)</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer class="pie">
+        <a href="Curriculum Practica HTML.pdf" target="_blank">Version para Imprimir-CV Carlos N</a>
+    </footer>
 </body>
+
 </html>
